force-app/main/default/objects/BMCServiceDesk__CMDBClassPermissions__c/BMCServiceDesk__CMDBClassPermissions__c.object-meta.xml
<CustomObject>
    <label>CMDB Class Permissions</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CMDB Class Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>