force-app/main/default/objects/BMCServiceDesk__CMDBClassPermissions__c/fields/BMCServiceDesk__Create__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Create__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Create permission on the specified CMDB class for the permissionset id.</description>
    <label>Create</label>
    <type>Checkbox</type>
</CustomField>