force-app/main/default/objects/BMCServiceDesk__CMDBClassPermissions__c/fields/BMCServiceDesk__Delete__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Delete permission on the specified CMDB class for the permissionset id.</description>
    <label>Delete</label>
    <type>Checkbox</type>
</CustomField>