force-app/main/default/objects/BMCServiceDesk__CMDBClassPermissions__c/fields/BMCServiceDesk__Edit__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Edit permission on the specified CMDB class for the permissionset id.</description>
    <label>Edit</label>
    <type>Checkbox</type>
</CustomField>