force-app/main/default/objects/BMCServiceDesk__CMDBClassPermissions__c/fields/BMCServiceDesk__FKCMDBClass__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKCMDBClass__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the ID of CMDB class for CRUD permissions</description>
    <label>FKCMDBClass</label>
    <referenceTo>BMCServiceDesk__CMDB_Class__c</referenceTo>
    <relationshipLabel>CMDB Class Permissions</relationshipLabel>
    <relationshipName>CMDB_Class_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>